# sos

./: .Dockerignore  .env  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yaml  docker-compose.yaml  manage.py  populate.py  pyproject.toml
apimobilie/: apps.py  models.py  serializers.py  urls.py  views.py
apimobilie/migrations/: 0001_initial.py
apimobilie/tests/: test_views.py
app/: urls.py  views.py
app/migrations/: groups.py
app/templates/: login.html
nginx/: nginx.conf
ocorrencias/: models.py  urls.py  views.py
ocorrencias/migrations/: 0001_initial.py  0002_ocorrencia_status_flag.py  0003_alter_ocorrencia_status_flag.py  0004_alter_ocorrencia_status_flag.py
ocorrencias/tests/: test_views.py
sos/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_usuario_user_email.py  0003_user_status_flag.py  0004_alter_user_cpf_alter_user_email_alter_user_is_active_and_more.py  0005_alter_user_foto.py  0006_alter_user_foto.py
users/tests/: test_models.py  test_views.py
vitimas/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
vitimas/migrations/: 0001_initial.py  0002_vitima_status_flag.py  0003_vitima_access_key_vitima_is_admin_vitima_last_login_and_more.py  0004_rename_data_joined_vitima_date_joined_and_more.py  0005_remove_vitima_access_key.py  0006_alter_vitima_status_flag.py  0007_alter_vitima_status_flag.py  0008_alter_vitima_status_flag.py  0009_vitima_chave_acesso.py  0010_alter_vitima_observacao.py
(+34 files in other folders)
